# Python_Longhour_coding

./: README.md  main.py  pyproject.toml
signal_ICT_RudraMiyani_92400133129/: operations.py  trigonometric_signals.py  unitary_signals.py
